--- a/src/components/posts/PostDtails.css
+++ b/src/components/posts/PostDtails.css
@@ -1,8 +1,11 @@
 .blockquote-custom {
   position: relative;
   font-size: 1.1rem;
+  background-color: #f4f3ef;
 }
-
+.blockquote {
+  background-color: #f4f3ef;
+}
 .blockquote-custom-icon {
   width: 50px;
   height: 50px;
